Corrected section alignment, filled and styled sidebar

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -56,35 +56,33 @@ table {
 /*==============================================*/
 
 body {
-	font-family: "Verdana", Sans-serif;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	box-sizing: border-box;
 	position: relative;
 	min-height: 100vh;
+	color: rgb(8,82,107);
 }
 
 nav {
 	width: 100vw;
 	height: 60px;
-	box-shadow: 0 4px 8px rgba(0,0,0,.28);
 }
 
 section {
-	float: left;
 	width: 100vw;
-	padding: 0vw 0vw 50px 0vw;
+	padding-bottom: 50px;
 }
 
 #chart-box {
 	width: 98vw;
+	margin: auto;
 }
 
 aside {
 	display: none;
-	/*width: 35vw;*/
-	/*float: right;*/
 	position: absolute;
 	left: 100vw;
-	right: -35vw;
+	right: -40vw;
 	top: 60px;
 	bottom: 30px;
 	background: rgb(255,255,255);
@@ -131,6 +129,7 @@ b {
 	width: 100vw;
 	background: rgb(8,82,107);
 	margin-bottom: 20px;
+	box-shadow: 0 2px 8px rgba(0,0,0,.28);
 }
 
 #header-container {
@@ -210,7 +209,7 @@ b {
 
 #aside-title {
 	font-size: 2em;
-	color: rgb(8,82,107);
+	color: rgb(255,149,3);
 	margin-bottom: 10px;
 }
 
@@ -263,6 +262,15 @@ b {
 	visibility: hidden;
 }
 
+.info-paragraph {
+	margin: 0px 0px 10px 10px;
+}
+
+.info-header {
+	margin-bottom: 10px;
+	font-weight: bold;
+}
+
 label[for="show-aside"] {
 	position: absolute;
 	right: 0;
@@ -270,6 +278,48 @@ label[for="show-aside"] {
 	width: 36px;
 	padding: 0 0 0 0;
 	z-index: 2;
+}
+
+.info-divider {
+	height: 2px;
+	width: 100%;
+	background: rgb(255,149,3);
+	margin: 10px 0px 10px 0px;
+}
+
+#background {
+	display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,.2);
+	z-index: 1;
+}
+
+.list-container {
+	display: flex;
+	align-items: flex-start;
+	margin-bottom: 10px;
+}
+
+#buy-region {
+	background: rgba(93,164,214,.3);
+	margin-left: 10px;
+	width: 80px;
+	height: 20px;
+}
+
+#cup-shape {
+	margin-left: 10px;
+	width: 80px;
+	height: 20px;
+}
+
+.info-cup-header {
+	display: inline-block;
+	border-bottom: 2px solid rgb(255,149,3);
 }
 
 @media (max-width: 775px) {
